fixed too small padding calculation

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,7 +24,7 @@ section .bg-light code, section .bg-light pre {
   height: 100%;
   backdrop-filter: brightness(0.45) hue-rotate(-10deg);
   -webkit-backdrop-filter: brightness(0.45) hue-rotate(-10deg);
-  padding: 4rem 2rem;
+  padding: 6rem 2rem;
 }
 
 nav {
